# yast-storage-ng

./: .cirrus.yml  .codeclimate.yml  .gitignore  .inch.yml  .rubocop.yml  .travis.yml  .yardopts  Dockerfile  README.md  RPMNAME  Rakefile
src/: Makefile.am
src/clients/: disk.rb  expert-partitioner.rb  expert_partitioner.rb  inst_disk_proposal.rb  inst_prepdisk.rb  partitioner.rb  partitioner_testing.rb  partitions_proposal.rb  proposal_demo.rb  proposal_testing.rb  storage_finish.rb  storage_testing.rb
src/desktop/: disk.desktop  org.openSUSE.YaST.Disk.desktop  org.opensuse.yast.Disk.desktop
src/examples/: boot_req_checker_demo.rb  device_demo.rb  devicegraph_conv  disk_size_demo.rb  fake-devicegraphs-yaml-format.md  fake-devicegraphs.yml  fake_device_demo.rb  fake_probing_demo.rb  probe_to_yaml.rb  proposal_demo.rb  proposal_dump_yaml.rb  proposal_settings_dialog.rb  proposed_devicegraph.yml  used_storage_features_demo.rb  x9.rb  yaml_writer_demo.rb
src/fillup/: sysconfig.storage-yast2-storage-ng.common  sysconfig.storage-yast2-storage-ng.default  sysconfig.storage-yast2-storage-ng.s390
src/lib/: bidi_markup.rb  haha.rb  y2storage.rb
src/scrconf/: etc_mtab.scr  sysconfig_fde-tools.scr  sysconfig_storage.scr
src/tools/: md_formatter.rb
test/: Makefile.am  actions_presenter_test.rb  auto_inst_proposal_test.rb  autoinst_proposal_test.rb  blk_device_test.rb  boot_requirements_checker_ppc_test.rb  boot_requirements_checker_s390_test.rb  boot_requirements_checker_test.rb  boot_requirements_checker_x86_test.rb  boot_requirements_context.rb  boot_requirements_duplicate_test.rb  dasd_test.rb  device_test.rb  devicegraph_test.rb  devices_list_test.rb  disk_analyzer_test.rb  disk_size_test.rb  disk_test.rb  existing_filesystem_test.rb  fake_device_factory_test.rb  guided_proposal_test.rb  lvm_pv_test.rb  lvm_vg_test.rb  md_level_test.rb  md_parity_test.rb  md_test.rb  package_handler_test.rb  partition_id_test.rb  partition_tables_test.rb  planned_subvol_test.rb  planned_volume_test.rb  planned_volumes_list.rb  planned_volumes_list_test.rb  proposal_gpt_test.rb  proposal_low_space_test.rb  proposal_mbr_test.rb  proposal_scenarios_ppc_test.rb  proposal_scenarios_s390_test.rb  proposal_scenarios_x86_test.rb  proposal_settings_test.rb  (+15 more)
test/autoinst_profile/: drive_section_test.rb  partition_section_test.rb  partitioning_section_test.rb  raid_options_section_test.rb  skip_list_section_test.rb  skip_rule_test.rb
test/boot_requirements_strategies/: analyzer_test.rb
test/callbacks/: activate_callbacks_test.rb  activate_test.rb
test/clients/: inst_disk_proposal_test.rb  inst_prepdisk_test.rb  partitions_proposal_test.rb
test/data/: crypttab  hwinfo.txt  hwinfo_bug1982536.txt  multi-linux-pc.yml
test/dialogs/: actions_presenter_test.rb  guided_setup_test.rb  inst_disk_proposal_test.rb  proposal_test.rb
test/filesystems/: blk_filesystem_test.rb  type_test.rb
test/partition_tables/: dasd_test.rb  msdos_test.rb
test/planned/: can_be_encrypted.rb  can_be_mounted.rb  lvm_vg_test.rb  md_test.rb
test/planned_devices/: assigned_space_test.rb  has_size_test.rb
test/proposal/: autoinst_devices_creator_test.rb  autoinst_devices_planner_test.rb  autoinst_drives_map_test.rb  autoinst_space_maker_test.rb  devices_planner_test.rb  encrypter_test.rb  lvm_creator_test.rb  lvm_helper_test.rb  partition_creator_test.rb  partitions_distribution_calculator_test.rb  phys_vol_distribution_test.rb  planned_devices_generator_test.rb  skip_list_rule_test.rb  skip_list_test.rb  skip_list_value_test.rb  skip_rule_test.rb  space_distribution_calculator_test.rb  space_distribution_test.rb  space_maker_test.rb  volumes_distribution_test.rb  volumes_generator_test.rb
test/refinements/: disk_test.rb
test/support/: autoinst_devices_planner_bcache.rb  autoinst_devices_planner_btrfs.rb  autoinst_devices_planner_conflicts.rb  autoinst_profile_sections_examples.rb  boot_requirements_context.rb  boot_requirements_uefi.rb  candidate_devices_context.rb  devices_planner_context.rb  devices_selector_context.rb  guided_setup_context.rb  partitioner_reprobe_examples.rb  proposal_context.rb  proposal_examples.rb  proposed_boot_partition_examples.rb  proposed_partitions_examples.rb  storage_helpers.rb  storage_matchers.rb  widgets_context.rb
test/widgets/: actions_summary_test.rb
test/y2partitioner/: blk_device_restorer_test.rb  cli_test.rb  device_graphs_test.rb  filesystem_errors_test.rb  keep_original_filesystems_test.rb  keep_original_ptable_test.rb  setup_errors_presenter_test.rb  test_helper.rb  ui_state_test.rb  unmounter_test.rb  yard_links_test.rb
test/y2storage/: actiongraph_test.rb  actions_presenter_test.rb  arch_test.rb  autoinst_proposal_bcache_test.rb  (+140 more)
(+1878 files in other folders)
